# wfc

./: Cargo.toml  LICENSE.md
benches/: standard.rs
examples/: multi-socket.rs  sandbox.rs  text.rs
src/: auto.rs  cells.rs  err.rs  ext.rs  lib.rs  perf.rs  prebuilt.rs  rules.rs  state.rs  util.rs
src/prebuilt/: arbiters.rs  auto.rs  constraints.rs  dims.rs  e2e.rs  processing.rs  shapes.rs  weights.rs
src/prebuilt/dims/: bevy.rs
src/prebuilt/e2e/: chaos.rs  maze2d.rs
