[package]
name = "wfc"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
resolver = "2"

[dependencies]
bimap = "0.6.3"
derive-new = "0.7.0"
derive_more = { version = "1.0", features = ["full"] }
itertools = "0.14.0"
maplit = "1.0.2"
nalgebra = "0.33.2"
ordermap = "0.5.4"
rand = "0.9.2"
rand_chacha = { version = "0.9.0", features = ["serde"] }
strum = "0.27.2"
strum_macros = "0.27.2"
thiserror = "2.0.9"

serde = { version = "1.0.217", features = ["derive"], optional = true }

bevy_reflect = { version = "0.17", optional = true }
bevy_utils = { version = "0.17", optional = true }

profiling = "1.0.17"
tracing = { version = "0.1.41", optional = true }
tracing-subscriber = { version = "0.3.1", optional = true, features = [
  "env-filter",
] }

tracing-tracy = { version = "0.11.0", optional = true, features = [
  "flush-on-exit",
] }
tracy-client = { version = "0.18.0", optional = true }

chrono = { version = "0.4.39", optional = true }
tracing-chrome = { version = "0.7.2", optional = true }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }


[[bench]]
name = "standard"
harness = false

[features]
serde = [
  "dep:serde",
  "nalgebra/serde",
  "nalgebra/serde-serialize",
  "ordermap/serde",
  "bimap/serde",
]

bevy = ["dep:bevy_reflect", "dep:bevy_utils"]

profiling = [
  "profiling/profile-with-tracing",
  "dep:tracing",
  "dep:tracing-subscriber",
]
tracing-tracy = ["profiling", "dep:tracing-tracy", "dep:tracy-client"]
tracing-chrome = ["profiling", "dep:tracing-chrome", "dep:chrono"]

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false

[profile.bench]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false
